Upgrade to Django 1.5. (#387)

--- a/gobotany/dkey/templates/dkey/_breadcrumbs.html
+++ b/gobotany/dkey/templates/dkey/_breadcrumbs.html
@@ -2,7 +2,7 @@
 You are here:
 {% for ancestor in page|breadcrumbs %}
   {% if forloop.counter0 == 0 %}
-    <a href="{% url dkey %}">Dichotomous Key</a>
+    <a href="{% url 'dkey' %}">Dichotomous Key</a>
   {% else %}
     &gt; <a data-rank="{{ ancestor.rank }}" data-title="{{ ancestor.title }}"
             href="{% url dkey_page ancestor|slug %}"
