--- a/gobotany/plantshare/templates/sightings.html
+++ b/gobotany/plantshare/templates/sightings.html
@@ -16,7 +16,7 @@
     <ul>
         {% for sighting in sightings.list %}
             <li><a
-                href="{% url ps-sighting sighting.id %}"><i>{{ sighting.identification }}</i>
+                href="{% url 'ps-sighting' sighting.id %}"><i>{{ sighting.identification }}</i>
                 at {{ sighting.location|capfirst }}</a>
                 by {{ sighting.user }}</li>
         {% endfor %}
