--- a/gobotany/simplekey/templates/simplekey/_plant_not_in_subgroup.html
+++ b/gobotany/simplekey/templates/simplekey/_plant_not_in_subgroup.html
@@ -8,6 +8,6 @@
                         </p>
                         <p>
                             <a class="back-level"
-                                href="{% url level1 key %}">&laquo; Take me back a level.</a>
+                                href="{% url 'level1' key %}">&laquo; Take me back a level.</a>
                         </p>
                     </div>
