--- a/gobotany/site/templates/gobotany/advanced.html
+++ b/gobotany/site/templates/gobotany/advanced.html
@@ -30,7 +30,7 @@
                                     get lots of information on each taxon.</li>
                                 </ul>
                             </section>
-                            <a href="{% url full-key-placeholder %}"
+                            <a href="{% url 'full-key-placeholder' %}"
                                 class="go-fullkey-btn">Go To Full Key</a>
                         </div>
                         <div class="landing-divider"></div>
@@ -58,7 +58,7 @@
                                     target="_blank">Flora Novae Angliae</a> (Haines
                                 2011).</p>
                             </section>
-                            <a href="{% url dkey %}"
+                            <a href="{% url 'dkey' %}"
                                 class="go-dichkey-btn">Go To Dichotomous Key</a>
                         </div>
                     </div>
