--- a/gobotany/site/templates/gobotany/terms.html
+++ b/gobotany/site/templates/gobotany/terms.html
@@ -28,7 +28,7 @@
                         to be bound by the Terms.  You shall also be subject to
                         any additional terms posted with respect to individual
                         sections of the Site.  Please review our <a 
-                            href="{% url site-privacy %}">Privacy Policy</a>,
+                            href="{% url 'site-privacy' %}">Privacy Policy</a>,
                         which also governs your use of the Site, to understand
                         our practices. If you do not agree, please discontinue
                         using the Site.  New England Wild Flower Society
@@ -228,7 +228,7 @@
                         <h3>Submitted Information</h3>
                         <p>Personal Information is voluntarily supplied by you 
                         when you register and submit data to the <a 
-                        href="{% url plantshare-placeholder %}">PlantShare</a> sector 
+                        href="{% url 'plantshare-placeholder' %}">PlantShare</a> sector 
                         of the Site. By registering at PlantShare, you allow us to 
                         associate your plant observations with a unique identifier 
                         (login name or your name), so that you can track your 
