--- a/gobotany/plantshare/templates/new_question_done.html
+++ b/gobotany/plantshare/templates/new_question_done.html
@@ -10,7 +10,7 @@
 <p>Thank you for asking your question. The botanist will review it
 and post an answer on the site.</p>
 
-<p><a href="{% url ps-questions %}#recent">Recently Answered Questions</a></p>
+<p><a href="{% url 'ps-questions' %}#recent">Recently Answered Questions</a></p>
 
 {% endblock %}
 
