--- a/gobotany/plantshare/templates/sightings_locator.html
+++ b/gobotany/plantshare/templates/sightings_locator.html
@@ -21,7 +21,7 @@
         id="plant-name"
         placeholder="scientific or common name"
         class="suggest"
-        data-suggest-url="{% url site-plant-name-suggestions %}?q=%s"
+        data-suggest-url="{% url 'site-plant-name-suggestions' %}?q=%s"
         data-align-menu-inside-input="true"
         data-submit-on-select="true">
     <input type="submit" value="Go">
