--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -25,8 +25,8 @@
 
                     <div id="breadcrumb">
                         You are here:
-                          <a href="{% url level1 key %}">{{ key|title }} Key</a>
-                        &gt; <a href="{% url level2 key pilegroup.slug %}"
+                          <a href="{% url 'level1' key %}">{{ key|title }} Key</a>
+                        &gt; <a href="{% url 'level2' key pilegroup.slug %}"
                             >{{ pilegroup.friendly_title|lower|capfirst }}</a>
                         &gt; <span>{{ pile.friendly_title }}</span>
                     </div>
@@ -82,7 +82,7 @@
             
                     <div class="section help">
                         <h5 class="left help last">Need Help?</h5>
-                        <a href="{% url site-getting-started %}"
+                        <a href="{% url 'site-getting-started' %}"
                             class="get-help-btn left">Get Help</a>
                     </div>
 
