--- a/gobotany/site/templates/gobotany/privacy.html
+++ b/gobotany/site/templates/gobotany/privacy.html
@@ -16,7 +16,7 @@
                     <h2>Submitted Information</h2>
                     <p>Personal Information is voluntarily supplied by you 
                     when you register and submit data to the <a 
-                    href="{% url plantshare-placeholder %}">PlantShare</a> sector 
+                    href="{% url 'plantshare-placeholder' %}">PlantShare</a> sector 
                     of the Site. By registering at PlantShare, you allow us to 
                     associate your plant observations with a unique identifier 
                     (login name or your name), so that you can track your 
