--- a/gobotany/taxa/templates/gobotany/genus.html
+++ b/gobotany/taxa/templates/gobotany/genus.html
@@ -7,7 +7,7 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
 
 {% block js_top %}
     <script>
-        API_URL = '{% url api-base %}';
+        API_URL = '{% url 'api-base' %}';
     </script>
 
     {# TODO: eventually move elsewhere #}
@@ -56,20 +56,20 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
 
                 <h4>Family</h4>
                 <p class="family">
-                    <a href="{% url taxa-family genus.family.slug %}"
+                    <a href="{% url 'taxa-family' genus.family.slug %}"
                     >{{ genus.family.name }}{% if genus.family.common_name %} ({{ genus.family.common_name|cut:"The "|lower }}){% endif %}</a></p>
 
                 <h4>This Genus&#8217;s Species:</h4>
                 <ul class="species">
                 {% for species in genus.taxa.all %}
-                    <li><i><a href="{% url taxa-species genus.slug species.epithet %}"
+                    <li><i><a href="{% url 'taxa-species' genus.slug species.epithet %}"
                     >{{ species.scientific_name }}</a></i></li>
                 {% endfor %}
                 </ul>
 
                 <p class="visit-dkey">
                   Visit this genus in the
-                  <a href="{% url dkey_page genus.name.lower %}"
+                  <a href="{% url 'dkey_page' genus.name.lower %}"
                      >Dichotomous Key</a>
                 </p>
 {% endblock %}
