Update some additional URL template tags for Django 1.5. (#387)

--- a/gobotany/dkey/templates/dkey/_breadcrumbs.html
+++ b/gobotany/dkey/templates/dkey/_breadcrumbs.html
@@ -5,7 +5,7 @@ You are here:
     <a href="{% url 'dkey' %}">Dichotomous Key</a>
   {% else %}
     &gt; <a data-rank="{{ ancestor.rank }}" data-title="{{ ancestor.title }}"
-            href="{% url dkey_page ancestor|slug %}"
+            href="{% url 'dkey_page' ancestor|slug %}"
             >{{ ancestor|display_title|expand_group_title }}</a>
   {% endif %}
 {% endfor %}
