--- a/gobotany/plantshare/templates/registration/activate.html
+++ b/gobotany/plantshare/templates/registration/activate.html
@@ -10,7 +10,7 @@
 <p>We're sorry, but it looks like your activation link has expired.
 Unfortunately your membership cannot be activated at this time.  If it has
 been more than 7 days since you signed up, please 
-<a href="{% url register %}">sign up</a> again.</p>
+<a href="{% url 'register' %}">sign up</a> again.</p>
 {% endblock %}
 
 {% block sidebar_content %}
