--- a/gobotany/plantshare/templates/registration/activation_complete.html
+++ b/gobotany/plantshare/templates/registration/activation_complete.html
@@ -8,7 +8,7 @@
 <h1>Activation Complete</h1>
 
 <p>Congratulations!</p>
-<p>Your PlantShare membership is now active. Feel free to <a href="{% url ps-main %}">Log In</a> and 
+<p>Your PlantShare membership is now active. Feel free to <a href="{% url 'ps-main' %}">Log In</a> and 
 begin sharing!</p>
 {% endblock %}
 
