--- a/gobotany/plantshare/templates/registration/logout.html
+++ b/gobotany/plantshare/templates/registration/logout.html
@@ -8,7 +8,7 @@
 <h1>Logged Out</h1>
 
 <p>You have successfully logged out of PlantShare. You may now close this
-browser window or <a href="{% url ps-main %}">log in</a> again.</p>
+browser window or <a href="{% url 'ps-main' %}">log in</a> again.</p>
 {% endblock %}
 
 {% block sidebar_content %}
