--- a/gobotany/site/templates/gobotany/_base.html
+++ b/gobotany/site/templates/gobotany/_base.html
@@ -37,7 +37,19 @@
             src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
-        {% include "gobotany/_script_constants.html" %}
+        <script>
+            API_URL = '{% url 'api-base' %}';
+            SEARCH_URL = '{% url 'search' %}';
+            SUGGEST_URL = '{% url 'site-search-suggestions' %}';
+
+            /* Get rid of Ember 0.9.8.1 warnings by telling it to go ahead and
+               behave like the future. */
+
+            ENV = {
+                CP_DEFAULT_CACHEABLE: true,
+                VIEW_PRESERVES_CONTEXT: true
+            };
+        </script>
 
         {% if not in_production %}
 
