Remove the 'split' Level 3 page variation for smartphones.
This variation was less preferred over the 'wide' and 'inline'
versions in user testing. Update the test page. Make 'wide'
the current default variation for the site. (#308)

--- a/gobotany/simplekey/templates/level3_test_links.html
+++ b/gobotany/simplekey/templates/level3_test_links.html
@@ -39,33 +39,31 @@
         <p>Links open a new browser window.</p>
 
         <h2>Broad-leaved woody plants</h2>
-        <p><a target="_blank"
-            href="/simple/woody-plants/woody-angiosperms/">split</a>
+        <p><del>split</del>
             |
             <a target="_blank"
-                href="/simple/woody-plants/woody-angiosperms/?m=mobile-wide">wide</a>
+                href="/simple/woody-plants/woody-angiosperms/">wide</a>
             |
             <a target="_blank"
-                href="/simple/woody-plants/woody-angiosperms/?m=mobile-wide%20mobile-inline">inline</a>
+                href="/simple/woody-plants/woody-angiosperms/?m=mobile-inline">inline</a>
         </p>
 
         <h2>Needle-leaved woody plants</h2>
-        <p><a target="_blank"
-            href="/simple/woody-plants/woody-gymnosperms/">split</a>
+        <p><del>split</del>
             |
             <a target="_blank"
-                href="/simple/woody-plants/woody-gymnosperms/?m=mobile-wide">wide</a>
+                href="/simple/woody-plants/woody-gymnosperms/">wide</a>
             |
             <a target="_blank"
-                href="/simple/woody-plants/woody-gymnosperms/?m=mobile-wide%20mobile-inline">inline</a>
+                href="/simple/woody-plants/woody-gymnosperms/?m=mobile-inline">inline</a>
         </p>
 
         <h2>About the variations</h2>
 
         <dl>
             <dt>split</dt>
-            <dd>questions always visible at top left; pop-up for
-            choices</dd>
+            <dd><del>questions always visible at top left; pop-up for
+            choices</del> (eliminated after user testing)</dd>
 
             <dt>wide</dt>
             <dd>questions initially hidden but full width; pop-up for
