Clarify names on the Level 3 smartphones test page. (#308)

--- a/gobotany/simplekey/templates/level3_test_links.html
+++ b/gobotany/simplekey/templates/level3_test_links.html
@@ -19,10 +19,10 @@
                 clear: left;
                 float: left;
                 font-weight: bold;
-                width: 5em;
+                width: 9em;
             }
             dt, dd {
-                height: 3em;
+                height: 4em;
                 padding-bottom: 0.5em;
             }
         </style>
@@ -42,7 +42,7 @@
         <p><del>split</del>
             |
             <a target="_blank"
-                href="/simple/woody-plants/woody-angiosperms/">wide</a>
+                href="/simple/woody-plants/woody-angiosperms/">overlay</a>
             |
             <a target="_blank"
                 href="/simple/woody-plants/woody-angiosperms/?m=mobile-inline">inline</a>
@@ -52,7 +52,7 @@
         <p><del>split</del>
             |
             <a target="_blank"
-                href="/simple/woody-plants/woody-gymnosperms/">wide</a>
+                href="/simple/woody-plants/woody-gymnosperms/">overlay</a>
             |
             <a target="_blank"
                 href="/simple/woody-plants/woody-gymnosperms/?m=mobile-inline">inline</a>
@@ -65,9 +65,9 @@
             <dd><del>questions always visible at top left; pop-up for
             choices</del> (eliminated after user testing)</dd>
 
-            <dt>wide</dt>
-            <dd>questions initially hidden but full width; pop-up for
-            choices</dd>
+            <dt><del>wide</del> overlay</dt>
+            <dd>questions initially hidden but full width; choices appear in
+            an overlay</dd>
 
             <dt>inline</dt>
             <dd>questions initially hidden but full width; choices are
